feat(product-service): externalize pagination configuration
- Replace hardcoded pagination defaults with environment variables
- Add @Value annotations in ProductController for external config
- Update application.yml and docker-compose.yml for env var support